# cpd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  debug_stability.py  pyproject.toml  verify_bypass.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cpd/: cli.py  config.py  engine.py  http_client.py
cpd/logic/: baseline.py  dom_analyzer.py  poison.py  validator.py
cpd/utils/: logger.py
tests/: test_analyzers.py  test_baseline.py  test_cookie_poisoning.py  test_drift.py  test_engine.py  test_enhancements.py  test_exotic_poisoning.py  test_integration.py  test_normalization.py  test_poison.py  test_poison_backslash.py  test_poison_benign.py  test_poison_enhanced.py  test_poison_grok.py  test_poison_nextjs.py  test_poison_range.py  test_poison_short.py  test_reporter.py  test_stability.py  test_validator.py
